# cdvl-crawler

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  config.example.json  pyproject.toml
.github/workflows/: test.yml
src/cdvl_crawler/: __init__.py  __main__.py  crawler.py  downloader.py  exporter.py  generator.py  types.py  utils.py
tests/: conftest.py  test_exporter.py  test_generator.py  test_utils.py
