[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"

[project]
name = "cdvl_crawler"
version = "0.7.2"
description = "Crawl and download videos from the CDVL (Consumer Digital Video Library) research repository"
readme = "README.md"
authors = [
    { name = "Werner Robitza", email = "werner.robitza@gmail.com" }
]
license = "MIT"
requires-python = ">=3.9"
keywords = ["cdvl", "video", "crawler", "downloader", "research"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Multimedia :: Video",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "aiohttp>=3.9.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "tqdm>=4.66.0",
]

[project.urls]
Homepage = "https://github.com/slhck/cdvl-crawler"
Repository = "https://github.com/slhck/cdvl-crawler"

[project.scripts]
cdvl-crawler = "cdvl_crawler.__main__:main"

[dependency-groups]
dev = [
    "pytest >=8.1.1,<9",
    "ruff>=0.12.11",
    "mypy",
]

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
exclude = ["build"]

